fix if condition

--- a/frontend/src/templates/partials/_packages.html
+++ b/frontend/src/templates/partials/_packages.html
@@ -47,7 +47,7 @@
 			</div>
 		</div>
 
-    {% if packageSlides %}
+    {% if Object.keys(packageSlides).length %}
 		<div class="owl-carousel packages-slider slider">
 			{% for item in packageSlides %}
 			<div class="packages-slider__item">
