add "want to become our partner" block

--- a/frontend/src/templates/partials/_partners.html
+++ b/frontend/src/templates/partials/_partners.html
@@ -51,6 +51,8 @@
     <div style="padding-bottom: 130px"></div>
     {% endif %}
 
-		<a class="basic-btn" data-aos="zoom-out-up" href="mailto:{{ info.email }}">Contact us</a>
+    <h3 class="section__title">Want to become our partner?</h3>
+
+		<a class="basic-btn" data-aos="zoom-out-up" href="mailto:{{ info.email }}">Yes, I Do!</a>
 	</div>
 </section>
