remove logo link, add menu link to conf page

--- a/frontend/src/templates/partials/_header.html
+++ b/frontend/src/templates/partials/_header.html
@@ -16,6 +16,7 @@
 					<li class="nav__item"><a class="nav__link js-scroll-to" href="#packages">Packages and addons</a></li>
 					<li class="nav__item"><a class="nav__link js-scroll-to" href="#partners">Partners</a></li>
 					<li class="nav__item"><a class="nav__link js-scroll-to" href="#footer">Follow us</a></li>
+					<li class="nav__item"><a class="nav__link js-scroll-to" href="{{ main.mainUrl }}">Event page</a></li>
 					{% endif %}
 				</nav>
 
