--- a/frontend/src/templates/partials/_intro.html
+++ b/frontend/src/templates/partials/_intro.html
@@ -2,7 +2,7 @@
 	<div class="intro__bg" data-aos="zoom-out" data-aos-delay="0" data-aos-duration="1000"></div>
 	<div class="intro__inner">
 		<div class="intro__logo" data-aos="fade-down" data-aos-delay="500" data-aos-duration="1000">
-			<a href="/" class="logo">
+			<a href="./" class="logo">
 				<img src="{{ info.logo.asset.url }}" alt="Logo" class="logo__img">
 			</a>
 		</div>
