--- a/frontend/src/templates/partials/_packages.html
+++ b/frontend/src/templates/partials/_packages.html
@@ -76,6 +76,7 @@
 			<h4 class="package-popup__subtitle">{{item.subtitle}}</h4>
 			<p class="package-popup__desc">{{item.description | safe}}</p>
 
+      {% if item.addons|length %}
 			<p class="package-popup__options">Add-ons at this level</p>
 
 			<ul class="stuff-list">
@@ -95,6 +96,7 @@
 				</li>
 				{% endfor %}
 			</ul>
+      {% endif %}
 		</div>
 		<div class="package-popup__right">
 			<img class="stuff-list__pic" src="{{item.rightImage.asset.url}}">
