add condition for missing sponsor logos

--- a/frontend/src/templates/partials/_partners.html
+++ b/frontend/src/templates/partials/_partners.html
@@ -1,6 +1,8 @@
 <section class="section partners" id="partners">
 	<div class="container">
+    {% if sponsors|length %}
     <h3 class="section__title">Partners</h3>
+    {% endfor %}
 
     {% if partners|length %}
       <div class="recommendations__quote">
@@ -48,7 +50,7 @@
     {% if youtubeVideo %}
 		<iframe class="partners__video" data-aos="zoom-in" src="{{ youtubeVideo }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     {% else %}
-    <div style="padding-bottom: 130px"></div>
+    {% if sponsors|length %}<div style="padding-bottom: 130px"></div>{% endfor %}
     {% endif %}
 
     <h3 class="section__title">Want to become our partner?</h3>
