--- a/frontend/src/templates/layouts/_layout.html
+++ b/frontend/src/templates/layouts/_layout.html
@@ -85,7 +85,7 @@
 {% endif %}
 
 <!-- Leadfeeder -->
-<script> (function(){ window.ldfdr = window.ldfdr || {}; (function(d, s, ss, fs){ fs = d.getElementsByTagName(s)[0]; function ce(src){ var cs = d.createElement(s); cs.src = src; setTimeout(function(){fs.parentNode.insertBefore(cs,fs)}, 1); } ce(ss); })(document, 'script', 'https://sc.lfeeder.com/lftracker_v1_Xbp1oaEg6Kv7EdVj.js'); })(); </script>
+<!--<script> (function(){ window.ldfdr = window.ldfdr || {}; (function(d, s, ss, fs){ fs = d.getElementsByTagName(s)[0]; function ce(src){ var cs = d.createElement(s); cs.src = src; setTimeout(function(){fs.parentNode.insertBefore(cs,fs)}, 1); } ce(ss); })(document, 'script', 'https://sc.lfeeder.com/lftracker_v1_Xbp1oaEg6Kv7EdVj.js'); })(); </script>-->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
